[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hpc-as-api"
version = "0.1.0"
description = "OpenAI-compatible API gateway for HPC clusters via Globus Compute"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "Anas Nassar", email = "nassar@uic.edu" },
]
keywords = ["hpc", "globus-compute", "openai", "api-gateway", "llm", "slurm", "vllm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Distributed Computing",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "websockets>=13.0",
    "cryptography>=43.0",
    "streamrelay>=0.2.0",
]

[project.optional-dependencies]
globus = [
    "globus-compute-sdk>=2.0",
    "globus-sdk>=4.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.28",
    "ruff",
]

[project.scripts]
hpc-as-api = "hpc_as_api.app:main"

[project.urls]
Homepage = "https://github.com/uicacer/hpc-as-api"
Repository = "https://github.com/uicacer/hpc-as-api"
"Bug Tracker" = "https://github.com/uicacer/hpc-as-api/issues"

[tool.hatch.build.targets.wheel]
packages = ["hpc_as_api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"

[tool.ruff]
line-length = 100
target-version = "py311"
